--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.10
   slide_to_act: ^2.0.1
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
