--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.1.10
   slide_to_act: ^2.0.1
   flutter_local_notifications: ^13.0.0
+  timezone: ^0.9.1
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
