--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,10 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.0
 
 flutter_icons:
-  image_path: "assets/images/appicon.png"
-  android: true
+  android: "launcher_icon"
   ios: true
+  image_path: "assets/icons/appicon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 
 # For information on the generic Dart part of this file, see the
