--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   timezone: ^0.9.1
   rxdart: ^0.27.7
-  collection: any
+  
+  serverpod_flutter: ^1.1.1
+  uosmedicalapp_client:
+    path: ./client
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +75,6 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
-    - assets/data/questions.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
