--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.4
   blurrycontainer: 1.0.2
+  pdf_viewer_plugin: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
