The FINAL Project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   serverpod_flutter: ^1.1.1
   uosmedicalapp_client:
     path: ./client
+  path_provider: ^2.1.1
+  pdfx: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +78,9 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/questions.json
+    - assets/questions/HAN English lectures/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
