--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_application_1">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.example.flutter_application_1">
+
+
    <application
         android:label="HAN Course Assistant"
         android:name="${applicationName}"
+        tools:overrideLibrary="com.github.barteksc.pdfviewer"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
