--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,8 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icons/appicon.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  image_path: "assets/icons/appicoon.png"
+  min_sdk_android: 21
 
 
 # For information on the generic Dart part of this file, see the
