--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.0
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/icons/appicoon.png"
   min_sdk_android: 21
